<resources>
    <string name="app_name">LoginDisplay</string>
    <string name="login_title">Login</string>
    <string name="login_username">Enter email</string>
    <string name="login_password">Enter Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="please_enter_name">Please enter name</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="login_sucessfully">Login Successfully</string>
    <string name="enter_phone">Enter Phone</string>
    <string name="notification_clicked">Notification clicked</string>
    <string name="title_activity_forgot_password">ForgotPasswordActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="error">Error</string>
    <string name="etEmail">etEmail</string>
    <string name="btnForget">btnForget</string>
    <string name="enter_email">enter_email</string>
    <string name="please_enter_phoneNumber">please_enter_phoneNumber</string>
</resources>