<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:orientation="vertical"
        android:layout_gravity="center"
        tools:context="com.harman.MainActivity">

        <Textview
            android:drawableTop="@drawable/ic_baseline_notifications_24"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:text="@string/login_title"
            android:textColor="@color/black"
            android:textSize="42sp">

        </Textview>

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="10dp"
            android:hint="@string/login_username"
            android:inputType="textEmailAddress"
            android:textSize="26sp"
            android:digits="qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLLZXCVBNM">

        </EditText>

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="16dp"
            android:textSize="26sp"
            android:inputType="textPassword"
            android:hint="@string/login_password">

        </EditText>

        <EditText
            android:id="@+id/etPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="@string/enter_phone"
            android:layout_marginLeft="1dp"
            android:digits="0123456789"
            android:maxLength="10"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="16dp"
            android:textSize="26sp">

        </EditText>
        <TextView
            android:id="@+id/tvForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:textSize="20sp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="50dp"
            android:text="@string/forgot_password"
            android:textColor="#26428b">
        </TextView>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:background="@color/purple_500"
            android:text="@string/login_title"
            android:textColor="@color/white"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="10dp">

        </Button>


    </LinearLayout>
</ScrollView>